Todas las noticias de noticiero de Multiverso
Básicamente todo mi trabajo en el servidor, lmao

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
           &copy;&nbsp;{{ "now" | date: "%Y" }}&nbsp;{{site.author}}
           &nbsp;
           {%- endif -%}
-          Theme&nbsp; <a href="https://github.com/abhinavs/moonwalk" target="_blank" rel="noreferrer">Moonwalk</a>
+          The website's theme is &nbsp; <a href="https://github.com/abhinavs/moonwalk" target="_blank" rel="noreferrer">Moonwalk</a>
         </div>
       </div>
     </main>
