--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -3,7 +3,7 @@
     {% for post in site.posts %}
       <li class="post-list-item">
         <span class="home-date">
-          {{ post.date | date: site.theme_config.date_format }}»
+          {{ post.date | date: site.theme_config.date_format }} by {{ post.author }}»
         </span>
         <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
       </li>
